Redesign for dashboard and client overview

--- a/app/notec/public/locales/en/appointments.json
+++ b/app/notec/public/locales/en/appointments.json
@@ -5,6 +5,7 @@
     "month": "Month",
     "year": "Year"
   },
+  "today_appointments": "Today's appointments",
   "appointment": {
     "new": "New appointment",
     "edit": "Edit appointment",
