--- a/app/notec/public/locales/en/menu.json
+++ b/app/notec/public/locales/en/menu.json
@@ -1,6 +1,6 @@
 {
     "general": {
-      "home": "Homchie",
+      "home": "Dashboard",
       "clients": "Clients",
       "schedule": "Schedule",
       "price_list": "Price list",
